# SummerProject_RandomIDE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
src/: CodeEditor.cpp  CodeEditor.h  MainMenu.cpp  MainMenu.h  Terminal.cpp  Terminal.h  WelcomeScreen.cpp  WelcomeScreen.h  globals.cpp  globals.h  main.cpp  sidebar.cpp  sidebar.h
